# StockRAG

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  query_similar.py  requirements.txt
.github/workflows/: push_PR.yaml
collect_data/: TW_getStockList.py  clearDB.py  collect.py  logger.py  stock_func.py
volume/: tg_bot.py
