[tool.poetry]
name = "stock-rag-model"
version = "0.1.0"
description = "Stock-RAG"
authors = ["Your Name gwtang@nlp.csie.ntust.edu.tw"]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.11.1"
httpx = "^0.27.0"
transformers = "^4.49.0"
datasets = "^2.17.1"
tqdm = "^4.52"
h5py = "^3.1"
torch = "^2.5.0"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
faiss-cpu = "^1.7.1"
chromadb = "^0.4.24"
pydantic = "^1.10.7"
numpy = "^1.21.0"
pandas = "^1.3.0"
matplotlib = "^3.4.2"
sentence-transformers = "^2.2.2"  
accelerate = "^0.29.2" 
bitsandbytes = "^0.42.0"  
protobuf = "^4.24.4"  
scipy = "^1.8.0"  
loguru = "^0.7.2"  
python-dotenv = "^1.0.1"
statsmodels = "^0.14.1"
pre-commit = "^3.6.2"  
black = "^24.3.0"  
flake8 = "^7.0.0"  
pytest = "^8.1.1"  

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
